fix 'half' content styling on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -300,6 +300,14 @@ a.text-normal {
   padding: 0 4% 0 1%;
 }
 
+@media (max-width: 840px) {
+  .content .half{
+    width: 90vw;
+    max-width: 90vw;
+    padding: 0;
+  }
+}
+
 .content.middle{
   top: 50%;
   transform: translateY(-50%);
@@ -317,7 +325,7 @@ a.text-normal {
 
 @media (max-width: 840px) {
   .content{
-    margin: 0 10% 0 10%;
+    margin: 0 3% 0 3%;
   }
   .content.bottom{
     top: 50%;
